[metadata]
name = contributions
home-page = https://github.com/4383/contributions
summary = Generate the most coolest github/gitlab timelines contributions
description-file = README.md
author = Hervé Beraud
author-email = herveberaud.pro@gmail.com
licence = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    contributions
data_files =
    etc/contributions/models = models/*

[extras]
devel=
    fixtures
    tox
    pbr

[entry_points]
console_scripts =
    contributions = contributions.__main__:main

[wheel]
universal = 1
